# mpdiscord

./: .gitignore  Cargo.toml  dump.py  flake.nix  game-sdk.nix
src/: art_server.rs  config.rs  conversions.rs  discord.rs  lib.rs  main.rs  mastodon.rs  mpd.rs  mpd_watcher.rs  updaters.rs
src/updaters/: discord.rs  mastodon.rs
