[package]
name = "mpdiscord"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
crossbeam = "0.8.0"
discord_game_sdk = "1.0.1"
finally-block = "0.2.0"
log = "0.4.14"
mparsed = "0.2.0"
pin-utils = "0.1.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.123", features = ["derive"] }
simple_logger = "1.11.0"
tokio = { version = "1.1.1", features = ["full"] }
toml = "0.5.8"
