[package]
name = "mpdiscord"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
async-trait = "0.1.51"
discord-sdk = "0.3.6"
log = "0.4.14"
mparsed = "0.2.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = { version = "1.0.127", features = ["derive"] }
simple_logger = "1.13.0"
tokio = { version = "1.9.0", features = ["full"] }
toml = "0.5.8"
