[package]
name = "mpdiscord"
version = "0.1.0"
authors = ["leo60228 <leo@60228.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
discord-sdk = "0.3.6"
log = "0.4.21"
mpd_client = "1.4.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
simple_logger = "5.0.0"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
